bin/testsuite/tests/compiler/src/errors/compiler5149.swg
#global testerror "Err0096"

struct A {}

impl A
{
    mtd titi() {}
}

#test
{
    var a: A
    a.toto()
}
